# mkdocs-mermaid2-plugin

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_old.md  pyproject.toml  requirements.txt  setup.py  update_pypi.sh
.github/workflows/: greetings.yml
markdownmermaid/: plugin.py
mermaid2/: __init__.py  fence.py  plugin.py  pyjs.py  util.py
test/: fixture.py  mkdocs.yml
test/docs/: index.md  second.md
test/docs/js/: extra.js
test/external_diagram/: mkdocs.yml
test/external_diagram/docs/: index.md
test/external_diagram/docs/diagrams/: my_diagram.mmd
test/extra_javascript/: mkdocs.yml
test/http_lib/: mkdocs.yml
test/http_lib/docs/: index.md
test/local_lib/: mkdocs.yml
test/material/: mkdocs.yml  test_site.py
test/material/docs/: index.md
test/medium/: mkdocs.yml
test/medium/docs/: index.md  second.md
test/simple/: mkdocs.yml  test_site.py
test/simple/docs/: index.md  second.md
test/simple/docs/js/: extra.js
test/simple_format/: mkdocs.yml
test/simple_format/docs/: index.md
test/simple_pre_10/: mkdocs.yml
test/superfences/: mkdocs.yml  test_site.py
test/superfences/docs/: index.md  second.md
test/superfences/docs/js/: extra.js  loader.js
webdoc/: extra_requirements.txt  mkdocs.yml
webdoc/docs/: contribute.md  description.md  index.md  library.md  superfences.md  tips.md  troubleshooting.md
