[project]
name = "mkdocs-mermaid2-plugin"

# This version number is the REFERENCE for the rest of the project,
# particularly for update_pypi.sh
version = "1.2.1"

description = "A MkDocs plugin for including mermaid graphs in markdown sources"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Laurent Franceschetti"},
]
keywords = [
    "markdown",
    "mermaid",
    "mkdocs",
    "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "beautifulsoup4>=4.6.3",
    "jsbeautifier",
    "mkdocs>=1.0.4",
    "pymdown-extensions >= 8.0",
    "requests",
    "setuptools>=18.5",
]

[tool.setuptools]
packages = { find = { exclude = ["*.tests"] } }

[project.optional-dependencies]
test = [
    "mkdocs-macros-test",
    "mkdocs-material",
    "packaging",
    "requests-html",
]

[project.entry-points."mkdocs.plugins"]
mermaid2 = "mermaid2.plugin:MarkdownMermaidPlugin"

[project.urls]
Homepage = "https://github.com/fralau/mkdocs-mermaid2-plugin"


